--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         <nav>
             <ul>
                 <li><a href="{{ "/" | relative_url }}">Home</a></li>
-                <li><a href="{{ "/researtch" | relative_url }}">Research Interests</a></li>
+                <li><a href="{{ "/research" | relative_url }}">Research Interests</a></li>
                 <li><a href="{{ "/blog" | relative_url }}">Cool Humans</a></li>
             </ul>
         </nav>
