--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #a2e6a1;
     color: white;
     padding: 10px 0;
     text-align: center;
@@ -32,7 +32,7 @@ header nav ul li a {
 footer {
     text-align: center;
     padding: 3px;
-    background-color: #333;
+    background-color: #a2e6a1;
     color: white;
     position: fixed;
     width: 100%;
